--- a/src/view/dashboard.fxml
+++ b/src/view/dashboard.fxml
@@ -89,22 +89,23 @@
                                         <Label text="Appointments" GridPane.columnIndex="1" />
                               <GridPane>
                                 <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="65.0" minWidth="10.0" prefWidth="100.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="65.0" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="86.0" minWidth="10.0" prefWidth="78.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="65.0" minWidth="10.0" prefWidth="52.0" />
                                     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="70.0" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="10.0" prefWidth="100.0" />
                                 </columnConstraints>
                                 <rowConstraints>
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <RadioButton fx:id="allRadio" mnemonicParsing="false" selected="true" text="All" GridPane.halignment="CENTER">
+                                    <RadioButton fx:id="allRadio" mnemonicParsing="false" onAction="#onActionAll" text="All" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                                        <toggleGroup>
                                           <ToggleGroup fx:id="appointmentToggle" />
                                        </toggleGroup>
                                     </RadioButton>
-                                    <RadioButton fx:id="monthRadio" mnemonicParsing="false" text="Month" toggleGroup="$appointmentToggle" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-                                    <RadioButton fx:id="weekRadio" mnemonicParsing="false" text="Week" toggleGroup="$appointmentToggle" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+                                    <RadioButton fx:id="monthRadio" mnemonicParsing="false" onAction="#onActionMonth" text="Month" toggleGroup="$appointmentToggle" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+                                    <RadioButton fx:id="weekRadio" mnemonicParsing="false" onAction="#onActionWeek" text="Week" toggleGroup="$appointmentToggle" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
+                                    <RadioButton fx:id="associatedRadio" mnemonicParsing="false" onAction="#onActionAssociated" prefWidth="81.0" selected="true" text="Associated" toggleGroup="$appointmentToggle" />
                                  </children>
                               </GridPane>
                                     </children>
