--- a/src/view/dashboard.fxml
+++ b/src/view/dashboard.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Dashboard">
     <columnConstraints>
@@ -154,15 +155,6 @@
                                 <Insets left="10.0" />
                             </GridPane.margin>
                             <children>
-                                <ButtonBar prefHeight="30.0" prefWidth="200.0" GridPane.rowIndex="12">
-                                    <buttons>
-                                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#onActionSave" text="Save" />
-                                        <Button fx:id="resetButton" mnemonicParsing="false" onAction="#onActionReset" text="Reset" />
-                                    </buttons>
-                                    <GridPane.margin>
-                                        <Insets right="10.0" />
-                                    </GridPane.margin>
-                                </ButtonBar>
                                 <Label fx:id="detailsLabel" text="Details" GridPane.halignment="CENTER" />
                                 <GridPane GridPane.rowIndex="1">
                                     <columnConstraints>
@@ -400,6 +392,39 @@
                                         </TextField>
                                     </children>
                                 </GridPane>
+                        <GridPane GridPane.rowIndex="12">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="149.0" />
+                            <ColumnConstraints hgrow="ALWAYS" maxWidth="233.0" minWidth="10.0" prefWidth="193.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <ButtonBar prefHeight="30.0" prefWidth="180.0" GridPane.columnIndex="1">
+                                 <buttons>
+                                    <Button fx:id="saveButton" mnemonicParsing="false" onAction="#onActionSave" text="Save" />
+                                    <Button fx:id="resetButton" mnemonicParsing="false" onAction="#onActionReset" text="Reset" />
+                                 </buttons>
+                                 <GridPane.margin>
+                                    <Insets right="10.0" />
+                                 </GridPane.margin>
+                              </ButtonBar>
+                              <GridPane>
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label fx:id="hoursLabel" text="Hours:" GridPane.halignment="CENTER" />
+                                    <Text fx:id="hoursText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                                 </children>
+                              </GridPane>
+                           </children>
+                        </GridPane>
                             </children>
                         </GridPane>
                     </children>
